add internationalization support, update theme colors, and restructure HomePage layout

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@next/bundle-analyzer": "^15.1.5",
     "@tabler/icons-react": "^3.28.1",
     "next": "15.1.5",
+    "next-intl": "^3.26.5",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
