add TutorCarousel and StutuFeedback components; integrate carousel functionality and feedback display

--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.17.1",
     "@mantine/core": "7.16.2",
     "@mantine/hooks": "7.16.2",
     "@next/bundle-analyzer": "^15.1.5",
     "@tabler/icons-react": "^3.28.1",
+    "embla-carousel-autoplay": "^7.1.0",
+    "embla-carousel-react": "^7.1.0",
     "next": "15.1.5",
     "next-intl": "^3.26.5",
     "react": "19.0.0",
