--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "next": "15.1.5",
     "next-intl": "^3.26.5",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
