--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "next-intl": "^3.26.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -47,6 +48,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/react": "19.0.7",
+    "@types/react-scroll": "^1",
     "babel-loader": "^9.2.1",
     "eslint": "^9.18.0",
     "eslint-config-mantine": "^4.0.3",
